# mvos-arm

./: .gitignore  Cargo.toml  Makefile  README.md  TODO  boot.s  boot.txt  boot64.s  build.sh  build64.sh  cbindgen.toml  cross_framebuffer.raw  generate_bootscreen.py  kernel.elf  kernel64.elf  kernel64.img  linker64.ld
.cargo/: config.toml
.github/workflows/: makefile.yml
32bit-old/: build.sh  kernel.elf  linker.ld  test-boot.s  test-linker.ld
src/: bindings.rs  bootscreen.c  bootscreen.rs  exceptions.rs  framebuffer.rs  lib.rs  mmio.rs  pci.rs  random.rs  trinkets.rs  uart.rs
src/allocator/: fixed_size_block.rs  linked_list.rs  mod.rs
src/drivers/: dtb_parser.rs  mmio_device.rs  mod.rs  pci.c  pci.h  pci.rs  ramfb.rs  uart.rs  virtio.rs  virtio_generic.c  virtio_generic.h
src/drivers/graphics/: mod.rs  ramfb.c  ramfb.h  ramfb.rs  virtio.rs
src/drivers/xhci/: mod.rs  xhci.c  xhci.h
src/exceptions/: exception_handler.c  exception_handler.h  exception_vectors_as.sx  irq.rs  mod.rs
src/include/: global_include.h  mvos_bindings.h  types.h
src/memory/: mmio.rs  mmu.c  mmu.h  mmu.rs  mod.rs  paging.c  paging.h  paging.rs  paging.sx
src/memory/allocator/: fixed_size_block.rs  free_list.rs  mod.rs
src/mvulkan/: color.rs  console.rs  mod.rs
src/thread/: mod.rs
