[package]
name = "mvos_arm"
version = "0.1.0"
edition = "2024"

[dependencies]
# lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
spin = "0.10.0"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[lib]
name = "mvos_arm"
crate-type = ["staticlib"]
